--- a/src/main/resources/templates/artworks/index.html
+++ b/src/main/resources/templates/artworks/index.html
@@ -6,6 +6,7 @@
     <div id="admin-bar">
         <div class="nav">
             <a class="navlink" href="/artworks/add">Add Artwork</a>
+            <a class="navlink" href="/artworks/delete">Delete Artwork</a>
         </div>
     </div>
     <main>
@@ -21,7 +22,9 @@
                     </tr>
                 </thead>
                 <tr th:each="artwork: ${artworksList}">
-                    <td th:text="${artwork}"></td>
+                    <td th:text="${artwork.id}"></td>
+                    <td th:text="${artwork.title}"></td>
+                    <td th:text="${artwork.artist}"></td>
                 </tr>
             </table>
         </th:block>
