Models and model-binding

--- a/src/main/resources/templates/artworks/add.html
+++ b/src/main/resources/templates/artworks/add.html
@@ -12,9 +12,30 @@
         <main>
             <h3>Add Artwork</h3>
             <form action='/artworks/add' method='POST'>
-                <label>Title <input type='text' name='title' /></label>
-                <label>Artist <input type='text' name='artist' /></label>
-                <button type='submit'>Add to Collection</button>
+                <div class="form-item">
+                    <label th:for="title">Title </label>
+                    <input th:field="${artwork.title}" />
+                    <p class="error" th:errors="${artwork.title}"></p>
+                </div>
+                <div class="form-item">
+                    <label th:for="artist">Artist</label>
+                    <input th:field=${artwork.artist} />
+                    <p class="error" th:errors="${artwork.artist}"></p>
+                </div>
+
+                <div class="form-item">
+                    <label th:for="style">Style</label>
+                    <select th:field="${artwork.style}">
+                        <option value=""></option>
+                        <option th:each="style : ${styles}"
+                                th:value="${style}"
+                                th:text="${style.displayName}"
+                                ></option>
+                    </select>
+                    <p class="error" th:errors="${artwork.style}"></p>
+                </div>
+
+                <button type='submit'>Add</button>
             </form>
         </main>
 
