--- a/src/main/resources/templates/artworks/index.html
+++ b/src/main/resources/templates/artworks/index.html
@@ -18,13 +18,17 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Title</th>
+                        <th>Artist</th>
+                        <th>Style</th>
                     </tr>
                 </thead>
                 <tr th:each="artwork: ${artworksList}">
                     <td th:text="${artwork.id}"></td>
                     <td th:text="${artwork.title}"></td>
                     <td th:text="${artwork.artist}"></td>
+                    <td th:text="${artwork.style.displayName}"></td>
                 </tr>
             </table>
         </th:block>
