--- a/src/main/resources/templates/artworks/index.html
+++ b/src/main/resources/templates/artworks/index.html
@@ -21,14 +21,24 @@
                         <th>ID</th>
                         <th>Title</th>
                         <th>Artist</th>
+                        <th>Year Created</th>
+                        <th>Media</th>
                         <th>Style</th>
+                        <th>Image</th>
                     </tr>
                 </thead>
                 <tr th:each="artwork: ${artworksList}">
                     <td th:text="${artwork.id}"></td>
                     <td th:text="${artwork.title}"></td>
                     <td th:text="${artwork.artist}"></td>
+                    <td th:text="${artwork.yearCreated}"></td>
+                    <td th:text="${artwork.media}"></td>
                     <td th:text="${artwork.style.displayName}"></td>
+                    <td>
+                        <a th:href="${'https://drive.google.com/uc?export=view&id=' + artwork.imageId}" target="_blank">
+                            <img th:src="${'https://drive.google.com/uc?export=view&id=' + artwork.imageId}" width="50px" />
+                        </a>
+                    </td>
                 </tr>
             </table>
         </th:block>
