--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,9 +15,10 @@
         <div id="mag">City Center Art Gallery</div>
         <div class="nav">
             <span id="admin-portal" class="bold"><a href="/">ADMIN PORTAL</a></span> | &nbsp;
-            Artists
+            <a class="navlink" href="/artists">Artists</a>
             <a class="navlink" href="/artworks">Artworks</a>
-            Styles
+            <span class="faux-link">Exhibitions</span>
+            <span class="faux-link">Styles</span>
         </div>
     </header>
 
