--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,8 +17,7 @@
             <span id="admin-portal" class="bold"><a href="/">ADMIN PORTAL</a></span> | &nbsp;
             <a class="navlink" href="/artists">Artists</a>
             <a class="navlink" href="/artworks">Artworks</a>
-            <span class="faux-link">Exhibitions</span>
-            <span class="faux-link">Styles</span>
+            <a class="navlink" href="/styles">Styles</a>
         </div>
     </header>
 
