--- a/src/main/resources/templates/artworks/add.html
+++ b/src/main/resources/templates/artworks/add.html
@@ -2,62 +2,87 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="~{fragments :: head}"></head>
 <body>
-    <header th:replace="~{fragments :: header}"></header>
-    <div id="admin-bar">
-        <div class="nav">
-            <a class="navlink" href="/artworks">View List of Artworks</a>
-            <a class="navlink" href="/artworks/delete">Delete Artwork</a>
-        </div>
+<header th:replace="~{fragments :: header}"></header>
+<div id="admin-bar">
+    <div class="nav">
+        <a class="navlink" href="/artworks">View List of Artworks</a>
+        <a class="navlink" href="/artworks/delete">Delete Artwork</a>
     </div>
-        <main>
-            <h3>Add Artwork</h3>
-            <form action='/artworks/add' method='POST'>
-                <div class="form-item">
-                    <label th:for="title">Title </label>
+</div>
+<main>
+    <h3>Add Artwork</h3>
+    <form action='/artworks/add' method='POST'>
+        <div class="container">
+            <div class="row">
+                <div class="form-item col-8">
+                    <label th:for="title">Title</label>
                     <input th:field="${artwork.title}" />
                     <p class="error" th:errors="${artwork.title}"></p>
                 </div>
-                <div class="form-item">
+                <div class="form-item col-4">
                     <label th:for="artist">Artist</label>
                     <select th:field="${artwork.artist}">
-                        <!-- Using artist for th:text implicitly calls toString -->
-                        <!-- Can call artist.id because this is now coming from its own class with a unique id -->
-                        <option value=""></option>
+                        <option value="">Select an artist</option>
                         <option th:each="artist : ${artists}"
                                 th:value="${artist.id}"
-                                th:text="${artist}"
+                                th:text="${artist.lastName + ', ' + artist.firstName}"
                         ></option>
                     </select>
+                    <p class="error" th:errors="${artwork.artist}"></p>
                 </div>
-
-                <div class="form-item">
-                    <label th:for="style">Style</label>
-                    <select th:field="${artwork.style}">
-                        <option value=""></option>
-                        <option th:each="style : ${styles}"
-                                th:value="${style}"
-                                th:text="${style.displayName}"
-                                ></option>
-                    </select>
-                    <p class="error" th:errors="${artwork.style}"></p>
-                </div>
-
-                <div class="form-item">
+            </div>
+            <div class="row">
+                <div class="form-item col-2">
                     <label th:for="yearCreated">Year Created</label>
-                    <input th:field="${artwork.yearCreated}" />
+                    <input th:field="${artwork.details.yearCreated}" />
+                    <p class="error" th:errors="${artwork.details.yearCreated}"></p>
                 </div>
-
-                <div class="form-item">
+                <div class="form-item col-4">
                     <label th:for="media">Media</label>
-                    <input th:field="${artwork.media}" />
+                    <input th:field="${artwork.details.media}" />
                 </div>
-                <div class="form-item">
-                    <label th:for="imageId">Image ID</label>
-                    <input th:field="${artwork.imageId}" />
+                <div class="form-item col-2">
+                    <label th:for="width">Width (in.)</label>
+                    <input type="number" min="0" step="0.1" th:field="${artwork.details.width}" />
                 </div>
-                <button type='submit'>Add</button>
-            </form>
-        </main>
-
+                <div class="form-item col-2">
+                    <label th:for="height">Height (in.)</label>
+                    <input type="number" min="0" step="0.1" th:field="${artwork.details.height}" />
+                </div>
+                <div class="form-item col-2">
+                    <label th:for="depth">Depth (in.)</label>
+                    <input type="number" min="0" step="0.1" th:field="${artwork.details.depth}" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-item col">
+                    <label th:for="description">Description</label>
+                    <textarea th:field="${artwork.details.description}"></textarea>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="form-item col">
+                            <label th:for="imageId">Image ID</label>
+                            <input th:field="${artwork.details.imageId}" />
+                            <p class="error" th:errors="${artwork.details.imageId}"></p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-item col">
+                            <label th:for="style">Style</label>
+                            <th:block th:each="style : ${styles}">
+                                <label>
+                                    <input type="checkbox" name="styleIds" th:value="${style.id}" />
+                                    <span th:text="${style.name}"></span>
+                                </label>
+                            </th:block>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button type='submit'>Add Artwork</button>
+    </form>
+</main>
 </body>
 </html>
